--- a/css/style.css
+++ b/css/style.css
@@ -2,21 +2,42 @@
     font-family: "Kalameh";
     font-style: normal;
     font-weight: 900;
-    src: url("../fonts/WebFonts/_Woff2/KalamehWeb-Black.woff2") format("woff2");
+    src: url("../fonts/WebFonts/_Woff/KalamehWeb-Black.woff") format("woff");
 }
 
 @font-face {
     font-family: "Kalameh";
     font-style: normal;
     font-weight: bold;
-    src: url("../fonts/WebFonts/_Woff2/KalamehWeb-Bold.woff2") format("woff2");
+    src: url("../fonts/WebFonts/_Woff/KalamehWeb-Bold.woff") format("woff");
 }
 
 @font-face {
     font-family: "Kalameh";
     font-style: normal;
     font-weight: normal;
-    src: url("../fonts/WebFonts/_Woff2/KalamehWeb-Regular.woff2") format("woff2");
+    src: url("../fonts/WebFonts/_Woff/KalamehWeb-Regular.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Kalameh";
+    font-style: normal;
+    font-weight: 900;
+    src: url("../fonts/WebFonts/_Woff/KalamehWeb\(FaNum\)-Black.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Kalameh";
+    font-style: normal;
+    font-weight: bold;
+    src: url("../fonts/WebFonts/_Woff/KalamehWeb\(FaNum\)-Bold.woff") format("woff");
+}
+
+@font-face {
+    font-family: "Kalameh";
+    font-style: normal;
+    font-weight: normal;
+    src: url("../fonts/WebFonts/_Woff/KalamehWeb\(FaNum\)-Regular.woff") format("woff");
 }
 
 :root {
@@ -26,6 +47,8 @@
     --border-00FF1A: 1px solid #00FF1A;
     --border-5300FF: 1px solid #5300FF;
     --border-FF1F00: 1px solid #FF1F00;
+    --color-gradient1: linear-gradient(90deg, #7011AD 0%, #BC0505 49.31%, #FC630F 100%);
+
 }
 
 * {
@@ -38,9 +61,58 @@ a {
     text-decoration: none;
 }
 
+input {
+    outline: none;
+}
+
 body {
     font-family: "Kalameh";
     background-color: var(--color-background);
+}
+
+header::before {
+    content: '';
+    width: 904px;
+    height: 876px;
+    background-image: radial-gradient(#3D0D58 38%, #070F1C 0);
+    position: absolute;
+    filter: blur(74px);
+    opacity: 0.4;
+    right: -274px;
+    top: -273px;
+    z-index: -1;
+}
+
+header::after {
+    content: "";
+    background-image: url(../images/Group\ 1.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 500px;
+    height: 500px;
+    z-index: -2;
+}
+
+.w_60 {
+    width: 60%;
+}
+
+.w_40 {
+    width: 40%;
+}
+
+.right_16 {
+    right: 16px;
+}
+
+.top_5 {
+    top: 1.2rem;
+}
+
+.padding_button {
+    padding-right: 3.5rem;
 }
 
 .color-orange {
@@ -74,8 +146,121 @@ body {
     width: max-content;
 }
 
+.main-header-title {
+    font-size: 3.5rem;
+}
+
+.background_gradient1 {
+    background-image: var(--color-gradient1);
+}
+
+.header_main_image {
+    width: 77%;
+    transform: rotate(13.3deg);
+    left: 48px;
+    top: 0px;
+    border-radius: 61px;
+}
+
+.header_image_backdrop {
+    width: 100%;
+    height: 100%;
+    background-image: radial-gradient(#3D0D58 58%, #070F1C 0);
+    top: -68px;
+    right: -121px;
+    -webkit-filter: blur(70px);
+    z-index: -1;
+}
+
+.main_image_header::before {
+    content: "";
+    background-image: url("../images/Path.png");
+    width: 45px;
+    height: 50px;
+    position: absolute;
+    background-repeat: no-repeat;
+    top: 22px;
+    right: -45px;
+}
+
+.main_image_header::after {
+    content: "";
+    background-image: url("../images/Path\ \(1\).png");
+    width: 68px;
+    height: 32px;
+    position: absolute;
+    background-repeat: no-repeat;
+    bottom: -22px;
+    left: 15px;
+}
+
+.count_user_site {
+    position: absolute;
+    width: 297.91px;
+    height: 78.99px;
+    bottom: 0px;
+    right: 0px;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    backdrop-filter: blur(8px);
+}
+
+.count_user_img {
+    width: 114.96px;
+    height: 45.49px;
+}
+
+.width_54 {
+    width: 54%;
+}
+
+.font_size_24 {
+    font-size: 1.5rem;
+}
+
 @media screen and (max-width:992px) {
     .bg_dark {
         background-color: #0a162b;
+    }
+
+    header::before {
+        display: none;
+    }
+
+    .main-header-title {
+        font-size: 2.5rem;
+    }
+
+    .main_image_header {
+        width: 70%;
+        margin: 0 auto;
+    }
+
+    .count_user_site {
+        width: 217.91px;
+        height: 58.99px;
+        right: -32px;
+    }
+
+    .count_user_img {
+        width: 64.96px;
+        height: auto;
+    }
+
+    .font_size_24 {
+        font-size: 1.1rem;
+    }
+
+    .main_image_header::after {
+        bottom: -3px;
+        left: -38px;
+    }
+
+    .w_70 {
+        width: 70%;
     }
 }
