--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,7 @@ header::after {
     width: 100%;
     height: 100%;
     background-image: radial-gradient(#3D0D58 58%, #070F1C 0);
+    filter: blur(74px);
     top: -68px;
     right: -121px;
     z-index: -1;
@@ -221,6 +222,11 @@ header::after {
     font-size: 1.5rem;
 }
 
+.icon_header_container {
+    width: 81px;
+    height: 81px;
+}
+
 @media screen and (max-width:992px) {
     .bg_dark {
         background-color: #0a162b;
@@ -268,6 +274,7 @@ header::after {
     .main-header-title {
         font-size: 2rem;
     }
+
     .main-header-text {
         font-size: 1.1rem !important;
     }
