coding footer html template & styles

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,10 @@ a {
     text-decoration: none;
 }
 
+ul {
+    list-style: none;
+}
+
 input {
     outline: none;
 }
@@ -410,6 +414,26 @@ header::after {
 
 .img_box_trend {
     transform: translateY(103px);
+}
+
+.Ellipse_4 {
+    filter: blur(50px);
+    top: -11%;
+    right: -12%;
+    width: 615px;
+    height: 584px;
+    background: radial-gradient(62.37% 62.37% at 50% 50%, rgba(8, 52, 164, 0.20) 21.7%, rgba(7, 15, 28, 0.00) 100%);
+    -webkit-filter: blur(50px);
+}
+
+.icon_footer_link {
+    background-color: rgba(255, 255, 255, 0.10);
+    width: 52px;
+    height: 52px;
+}
+
+.icon_footer_instagram {
+    background: linear-gradient(90deg, #9A5BFF 0%, #FF1212 53.12%, #FF7F56 100%) !important;
 }
 
 @media screen and (max-width:1400px) {
