--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,19 @@
 @font-face {
+    font-family: "YekanBakh";
+    font-style: normal;
+    font-weight: 900;
+    src: url("../fonts/YekanBakh-Heavy.630c4fa4.woff");
+}
+
+@font-face {
+    font-family: "YekanBakh";
+    font-style: normal;
+    font-weight: 500;
+    src: url("../fonts/YekanBakh-Medium.f7360956.woff");
+}
+
+
+@font-face {
     font-family: "Kalameh";
     font-style: normal;
     font-weight: 900;
@@ -78,7 +93,7 @@ input {
 }
 
 body {
-    font-family: "Kalameh";
+    font-family: "YekanBakh";
     background-color: var(--color-background);
 }
 
@@ -317,7 +332,7 @@ header::after {
 
 .hot__bides-box-bottom h5,
 .hot__bides-box-bottom>p {
-    font-family: "Gilroy";
+    font-family: "YekanBakh";
 }
 
 .site__info-box-1 {
@@ -356,7 +371,7 @@ header::after {
     padding-inline: 1.5rem;
     padding-bottom: 0.5rem;
     padding-top: 5.5rem;
-    font-family: "Gilroy";
+    font-family: "YekanBakh";
     margin-top: 18rem;
 }
 
